--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 								<section>
 									<header>
 										<h3>League of legends</h3>
-										<p>PROXIMAMENTE.</p>
+										<p>Proximamente pondre partidas.</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
