--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
 											<a href="https://www.youtube.com/watch?v=OpSa1CbZeSc&ab_channel=XxXFrosstXxX" target="_blank" rel="noopener noreferrer"><img src="images/gallery/fulls/01.jpg"/></a>
 											<a href="https://www.youtube.com/watch?v=szzc1CyIbnM&ab_channel=XxXFrosstXxX" target="_blank" rel="noopener noreferrer"><img src="images/gallery/fulls/02.jpg"/></a>
 											<a href="https://www.youtube.com/watch?v=woQiOECiMXE&ab_channel=XxXFrosstXxX" target="_blank" rel="noopener noreferrer"><img src="images/gallery/fulls/03.jpg"/></a>	
-											<a href="https://www.youtube.com/watch?v=cVcbG3_tXBs&ab_channel=XxXFrosstXxX" target="_blank" rel="noopener noreferrer"><img src="images/gallery/fulls/01.jpg"/></a>
-											<a href="https://www.youtube.com/watch?v=yhyE1BlprYc&ab_channel=XxXFrosstXxX" target="_blank" rel="noopener noreferrer"><img src="images/gallery/fulls/02.jpg"/></a>
-											<a href="https://youtu.be/ZESXbyr1hBM" target="_blank" rel="noopener noreferrer"><img src="images/gallery/fulls/03.jpg"/></a>
+											<a href="https://www.youtube.com/watch?v=cVcbG3_tXBs&ab_channel=XxXFrosstXxX" target="_blank" rel="noopener noreferrer"><img src="images/gallery/fulls/04.jpg"/></a>
+											<a href="https://www.youtube.com/watch?v=yhyE1BlprYc&ab_channel=XxXFrosstXxX" target="_blank" rel="noopener noreferrer"><img src="images/gallery/fulls/05.jpg"/></a>
+											<a href="https://youtu.be/ZESXbyr1hBM" target="_blank" rel="noopener noreferrer"><img src="images/gallery/fulls/05.jpg"/></a>
 										</div>
 									</div>
 								</section>
@@ -120,7 +120,21 @@
 										</div>
 									</div>
 								</section>
-
+							
+								<!-- Section -->
+							<section>
+								<header>
+									<h3>Proximamente</h3>
+									<p>Proximamente.</p>
+								</header>
+								<div class="content">
+									<div class="gallery">
+										<a href="images/gallery/fulls/08.jpg" class="portrait"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/09.jpg" class="portrait"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/10.jpg" class="landscape"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
+									</div>
+								</div>	
+							</section>
 						</div>
 					</section>
 
