--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
 									</header>
 									<div class="content">
 										<div class="gallery">											
-											<a href="https://www.youtube.com/watch?v=OpSa1CbZeSc&ab_channel=XxXFrosstXxX" target="_blank" rel="noopener noreferrer"><img src="images/gallery/fulls/01.jpg"/></a>
-											<a href="https://www.youtube.com/watch?v=szzc1CyIbnM&ab_channel=XxXFrosstXxX" target="_blank" rel="noopener noreferrer"><img src="images/gallery/fulls/02.jpg"/></a>
-											<a href="https://www.youtube.com/watch?v=woQiOECiMXE&ab_channel=XxXFrosstXxX" target="_blank" rel="noopener noreferrer"><img src="images/gallery/fulls/03.jpg"/></a>	
+											<a href="https://www.youtube.com/watch?v=OpSa1CbZeSc&ab_channel=XxXFrosstXxX" target="_blank" rel="noopener noreferrer"><img src="images/gallery/fulls/FrosstVAI.jpg"/></a>
+											<a href="https://www.youtube.com/watch?v=szzc1CyIbnM&ab_channel=XxXFrosstXxX" target="_blank" rel="noopener noreferrer"><img src="images/gallery/fulls/FrosstVAI.jpg"/></a>
+											<a href="https://www.youtube.com/watch?v=woQiOECiMXE&ab_channel=XxXFrosstXxX" target="_blank" rel="noopener noreferrer"><img src="images/gallery/fulls/FrosstVAI.jpg"/></a>	
 											<a href="https://www.youtube.com/watch?v=cVcbG3_tXBs&ab_channel=XxXFrosstXxX" target="_blank" rel="noopener noreferrer"><img src="images/gallery/fulls/04.jpg"/></a>
-											<a href="https://www.youtube.com/watch?v=yhyE1BlprYc&ab_channel=XxXFrosstXxX" target="_blank" rel="noopener noreferrer"><img src="images/gallery/fulls/FrosstVAI.jpg"/></a>
-											<a href="https://youtu.be/ZESXbyr1hBM" target="_blank" rel="noopener noreferrer"><img src="images/gallery/fulls/FrosstVAI.jpg"/></a>
+											<a href="https://www.youtube.com/watch?v=yhyE1BlprYc&ab_channel=XxXFrosstXxX" target="_blank" rel="noopener noreferrer"><img src="images/gallery/fulls/02.jpg"/></a>
+											<a href="https://www.youtube.com/watch?v=ZESXbyr1hBM" target="_blank" rel="noopener noreferrer"><img src="images/gallery/fulls/FrosstVAI.jpg"/></a>
 										</div>
 									</div>
 								</section>
