--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 						<div class="content">
 							<p><strong>La edad de romperlo todo</strong> Aunque parezca mentira, empece interesandome por el software, queria aprender los comandos de ms-dos para poder usar el ordenador de mi padre, bueno, acabe rompiendolo mil veces, y arreglandolo 100, un desastre...
 							 Aunque eso me dio las habilidades necesarias para comprender que un ordenador no hace lo que quieres, hace lo que le dices, y a base de prueba error fui aprendiendo.
-							Mas mayor me dio por verle las tripas, desmontar y montar pc`s con piezas de otros rotos, y milagrosamente casi siempre funcionaban. Ya de mas adulto, empece a trastear linux
-							y aprendi a usarlo, bueno, mas bien me defendia, a partir de ahi, cai completamente en barrena, empece a estudiar programacion, seguridad informatica y todo lo que podia.</p>
+							Cuando creci, me dio por verle las tripas, desmontar y montar pc`s con piezas de otros rotos, y milagrosamente casi siempre funcionaban. Ya de mas adulto, empece a trastear linux
+							y aprendi a usarlo, bueno, mas bien me defendia, a partir de ahi, cai completamente en barrena, empece a estudiar programacion, seguridad informatica y todo lo que puedo.</p>
 							<ul class="feature-icons">
 								<li class="icon solid fa-laptop">Compatibilidad hardware</li>
 								<li class="icon solid fa-signal">Redes</li>						
