--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="images/pic01.jpg" alt="Image not found" /></span>
 						</div>
 					</section>
 
@@ -153,7 +153,7 @@
 					</section>
 
 				<!-- Elements -->
-				<!--
+				
 					<section>
 						<header>
 							<h2>Elements</h2>
