--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
 						</div>
 					</section>
 
-				--> Elements -->
+				<!----> Elements -->
 				
-					<section>
+					<!--<section>
 						<header>
 							<h2>Elements</h2>
 						</header>
