--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 							<p><strong>hola</strong> ...</p>
 							<ul class="actions">
 								<li><a href="#" class="button primary large">Get Started</a></li>
-								<li><a href="#" class="button large">Learn More</a></li>
+								<li><a href="#" class="button large">Lee mas</a></li>
 							</ul>
 						</div>
 					</section>
