--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Proximamente</h3>
-										<p>Proximamente.</p>
+										<h3>Programacion/h3>
+										<p>Estos son los estudios que estoy haciendo ahora mismo</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/08.jpg" class="portrait"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
+											<a href="https://github.com/FrosstAlex/estudio" target="_blank" rel="noopener noreferrer"><img src="images/gallery/fulls/11.jpg"/></a>
 											<a href="images/gallery/fulls/09.jpg" class="portrait"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
 											<a href="images/gallery/fulls/10.jpg" class="landscape"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
 										</div>
