--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="https://github.com/FrosstAlex/estudio" target="_blank" rel="noopener noreferrer"><img src="images/gallery/fulls/11.jpg"/></a>
+											<a href="https://github.com/FrosstAlex/estudio" class="portrait"><img src="images/gallery/thumbs/11.jpg" alt="" /></a>
 											<a href="images/gallery/fulls/09.jpg" class="portrait"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
 											<a href="images/gallery/fulls/10.jpg" class="landscape"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
 										</div>
