--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Programacion/h3>
+										<h3>Programacion</h3>
 										<p>Estos son los estudios que estoy haciendo ahora mismo</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="https://github.com/FrosstAlex/estudio" class="portrait"><img src="images/gallery/thumbs/11.jpg" alt="" /></a>
+											<a href="https://github.com/FrosstAlex/estudio" class="portrait"><img src="images/gallery/thumbs/12.png" alt="" /></a>
 											<a href="images/gallery/fulls/09.jpg" class="portrait"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
 											<a href="images/gallery/fulls/10.jpg" class="landscape"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
 										</div>
