--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 									<div class="content">
 										<div class="gallery">
 											<a href="https://github.com/FrosstAlex/estudio" class="portrait"><img src="images/gallery/thumbs/Python Canarias.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/09.jpg" class="portrait"><img src="images/gallery/thumbs/12.png" alt="" /></a>
+											<a href="images/gallery/fulls/09.jpg" class="portrait"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
 											<a href="images/gallery/fulls/10.jpg" class="landscape"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
 										</div>
 									</div>
